# WhatsappUltraFast

./: .SRCINFO  PKGBUILD  README.md
pkg/whatsapp-ultra-fast-bin/: .BUILDINFO  .MTREE  .PKGINFO
pkg/whatsapp-ultra-fast-bin-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/whatsapp-ultra-fast-bin/usr/share/applications/: WhatsappUltraFast.desktop
src/: .MTREE  .PKGINFO  index.html  main.js  style.css  whatsapp-ultra-fast-0.1.0.pkg.tar.zst
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
