[package]
name = "WhatsappUltraFast"
version = "0.1.2"
description = "A Whatsapp Web That Using Rust As The Programming Language."
authors = ["Ramdan <developer@nyanpixel.my.id>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2", features = ["v2_20"] }
